--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <!-- <style> -->
-  <!--   <link rel="stylesheet" href="style.css"> -->
-  <!-- </style> -->
-  <head></head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+  </head>
   <body></body>
 </html>
 
