--- a/front-end/index.html
+++ b/front-end/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="global.css">
   </head>
   <body></body>
 </html>
